--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -16,7 +16,10 @@ command.map.mapInfo.proto = Proto
 command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
 
-command.map.currentRotation.title = Current Rotation
+command.map.noRotationMatch = No rotations matched query
+command.map.noRotation = No rotation currently in use
+command.map.noRotations = No loaded rotations
+command.map.currentRotation.title = Rotation
 
 command.map.rotationList.title = Loaded Rotations
 
