Improve rotations' integration to the codebase
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -16,12 +16,12 @@ command.map.mapInfo.proto = Proto
 command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
 
-command.map.noRotationMatch = No rotations matched query
-command.map.noRotation = No rotation currently in use
-command.map.noRotations = No loaded rotations
-command.map.currentRotation.title = Rotation
+command.rotation.noRotationMatch = No rotations matched query
+command.rotation.noRotation = No rotation currently in use
+command.rotation.noRotations = No loaded rotations
+command.rotation.currentRotation.title = Rotation
 
-command.map.rotationList.title = Loaded Rotations
+command.rotation.rotationList.title = Loaded Rotations
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
