--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -23,6 +23,8 @@ command.rotation.currentRotation.title = Rotation
 
 command.rotation.rotationList.title = Loaded Rotations
 
+rotations.rotationChange = Rotation has been set to {0} in order to better adjust to the current player count.
+
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
 map.genre.other = Other
