Translate the skip command's success message
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -22,8 +22,10 @@ command.rotation.noRotations = No loaded rotations
 command.rotation.currentRotation.title = Rotation
 
 command.rotation.rotationList.title = Loaded Rotations
+command.rotation.skip.message = Skipped a total of {0} positions.
 
 rotations.rotationChange = Rotation has been set to {0} in order to better adjust to the current player count.
+
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
