--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -20,12 +20,12 @@ command.rotation.noRotationMatch = No rotations matched query
 command.rotation.noRotation = No rotation currently in use
 command.rotation.noRotations = No loaded rotations
 command.rotation.currentRotation.title = Rotation
+command.rotation.rotationsDisabled = Rotations are currently disabled
 
 command.rotation.rotationList.title = Loaded Rotations
 command.rotation.skip.message = Skipped a total of {0} positions.
 
 rotations.rotationChange = Rotation has been set to {0} in order to better adjust to the current player count.
-
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
