Contemplate that there may not be a next map for /next
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/i18n/templates/pgm/PGMMessages.properties
+++ b/src/main/i18n/templates/pgm/PGMMessages.properties
@@ -23,6 +23,7 @@ command.admin.pgm = Configuration successfully reloaded.
 
 # {0} = map title and version
 command.map.next.success = Next map: {0}
+command.map.next.noNextMap = No next map
 
 command.map.update.running = Not updated, map modified by active match
 
