Add support for rotations
Signed-off-by: BGM <bgmp00@protonmail.com>

--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -16,9 +16,17 @@ command.map.mapInfo.proto = Proto
 command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
 
-command.map.currentRotation.title = Current Rotation
+command.rotation.noRotationMatch = No rotations matched query.
+command.rotation.noRotation = No rotation currently in use.
+command.rotation.noRotations = No loaded rotations.
+command.rotation.currentRotation.title = Rotation
+command.rotation.rotationsDisabled = Rotations are currently disabled.
 
-command.map.rotationList.title = Loaded Rotations
+command.rotation.rotationList.title = Loaded Rotations
+command.rotation.skip.message = Skipped a total of {0} positions.
+command.rotation.skip.noNegative = You may not skip negative positions!
+
+rotations.rotationChange = Rotation has been set to {0} in order to better adjust to the current player count.
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
