Implement persistent settings * Uses the Datastore API for persistence * Caches results in-memory, along with SQLite3 database * Add /setting, /toggle, and /set commands to change settings
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/src/main/i18n/templates/pgm/PGMErrors.properties
+++ b/src/main/i18n/templates/pgm/PGMErrors.properties
@@ -61,6 +61,7 @@ command.teamNotFound = No teams matched query.
 command.competitorNotFound = No competitors matched query.
 command.rotationNotFound = No rotations matched query.
 command.playerNotFound = No players matched query.
+command.settingNotFound = No settings matched query.
 command.multiplePlayersFound = More than one player found! Use @<name> for exact matching.
 command.unknownError = An unknown error has occurred. Please refer to the server console.
 
