--- a/src/main/i18n/templates/pgm/PGMMessages.properties
+++ b/src/main/i18n/templates/pgm/PGMMessages.properties
@@ -190,3 +190,7 @@ mutation.type.double_jump.desc = super jump powers
 mutation.type.invisibility.desc = enemy players cannot be seen
 mutation.type.lightning.desc = lightning strikes from the sky
 mutation.type.rage.desc = instant kills
+
+command.setting.get = Your {0} setting is currently set to {1}
+command.setting.options = Possible options are {0}
+command.setting.set = Your {0} setting has changed from {1} to {2}
