Implement match preloading
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/src/main/i18n/templates/pgm/PGMUI.properties
+++ b/src/main/i18n/templates/pgm/PGMUI.properties
@@ -268,7 +268,9 @@ match.scoreboard.gs.title = Ghost Squadron
 tablist.authors.tooMany = type /map for info
 
 countdown.cycle.message = Cycling to {0} in {1}
+countdown.cycle.message.no_map=Cycling in {0}
 countdown.cycle.complete = Cycled to {0}
+countdown.cycle.complete.no_map = Cycled
 countdown.matchStart.message = Match starting in {0}
 countdown.huddle.message = Team huddle ends in {0}
 broadcast.serverRestart.message = Server restarting in {0}
