Add basic functionality to map pools
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -534,6 +534,9 @@ command.map.mapInfo.proto = Proto
 command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
 
+
+command.pool.noVote = No voting pool currently in use.
+
 command.rotation.noRotationMatch = No rotations matched query.
 command.rotation.noRotation = No rotation currently in use.
 command.rotation.noRotations = No loaded rotations.
