Fix NPE when server is full
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/src/main/i18n/templates/pgm/PGMErrors.properties
+++ b/src/main/i18n/templates/pgm/PGMErrors.properties
@@ -111,7 +111,7 @@ invalidInput.string.numberExpected = Number expected in place of '{0}'
 
 incorrectWorld.kickMessage = Uh oh! We had an error. Please try rejoining.
 
-serverFull = Server is full
+serverFull = Server is full, consider donating to be able to join when full!
 
 autoJoin.teamsFull = Teams are full
 autoJoin.capacity = Teams are at capacity
