Finish & cleanup map pools
Signed-off-by: Pablete1234 <pabloherrerapalacio@gmail.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -535,19 +535,22 @@ command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
 
 
-command.pool.noVote = No voting pool currently in use.
+command.pools.noPoolMatch = No map pools matched query.
+command.pools.noRotation = No rotation currently in use.
+command.pools.noMapPools = No loaded map pools.
+command.pools.mapPool.title = Map pool
+command.pools.mapPoolsDisabled = Map pools are currently disabled.
 
-command.rotation.noRotationMatch = No rotations matched query.
-command.rotation.noRotation = No rotation currently in use.
-command.rotation.noRotations = No loaded rotations.
-command.rotation.currentRotation.title = Rotation
-command.rotation.rotationsDisabled = Rotations are currently disabled.
+command.pools.mapPoolList.title = Loaded Map Pools
+command.pools.skip.message = Skipped a total of {0} positions.
+command.pools.skip.noNegative = You may not skip negative positions!
 
-command.rotation.rotationList.title = Loaded Rotations
-command.rotation.skip.message = Skipped a total of {0} positions.
-command.rotation.skip.noNegative = You may not skip negative positions!
+command.pool.vote.hover = Click to toggle vote
+command.pool.vote.noVote = There is no poll to vote in currently.
+command.pool.vote.voted = You have voted for {0}.
+command.pool.vote.removedVote = You removed your vote for {0}.
 
-rotations.rotationChange = Rotation has been set to {0} in order to better adjust to the current player count.
+pools.poolChange = Map pool has been set to {0} in order to better adjust to the current player count.
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
