Print maptag in the /mapinfo command
Signed-off-by: TheMolkaPL <themolkapl@gmail.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -518,6 +518,7 @@ misc.team = Team
 
 command.map.mapList.title = Maps
 
+command.map.mapInfo.mapTag.hover = Click to list all {0} maps
 command.map.mapInfo.edition = Edition
 command.map.mapInfo.gamemode.singular = Gamemode
 command.map.mapInfo.gamemode.plural = Gamemodes
