Add basic report command with alert and event
Signed-off-by: Pugzy <pugzy@mail.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -451,6 +451,12 @@ command.class.view.list = List all classes by typing '/classes'
 command.development.clearErrors.success = Errors cleared!
 command.development.listErrors.noErrors = No errors!
 
+# {0} = sender
+# {1} = accused
+# {2} = reason
+command.report.notify = {0} reported {1}: {2}
+command.report.acknowledge = The issue will be dealt with shortly.
+
 # {0} = team name
 ffa.join = You joined the match
 team.join = You joined {0}
@@ -515,6 +521,7 @@ misc.ownership = {0}'s {1}
 
 misc.by = by
 misc.team = Team
+misc.thankYou = Thank you.
 
 command.map.mapList.title = Maps
 
