--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -518,6 +518,7 @@ misc.team = Team
 
 command.map.mapList.title = Maps
 
+command.map.mapTag.hover = Click to list all {0} maps
 command.map.mapInfo.edition = Edition
 command.map.mapInfo.gamemode.singular = Gamemode
 command.map.mapInfo.gamemode.plural = Gamemodes
@@ -551,8 +552,6 @@ command.pool.vote.voted = You have voted for {0}.
 command.pool.vote.removedVote = You removed your vote for {0}.
 
 pools.poolChange = Map pool has been set to {0} in order to better adjust to the current player count.
-
-map.mapTag.hover = Click to list all {0} maps
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
