--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -546,6 +546,8 @@ command.pools.mapPoolList.title = Loaded Map Pools
 command.pools.skip.message = Skipped a total of {0} positions.
 command.pools.skip.noNegative = You may not skip negative positions!
 
+command.pool.vote.book.title = Map Vote
+command.pool.vote.book.header = Click to select all maps you'd like to play:
 command.pool.vote.hover = Click to toggle vote
 command.pool.vote.noVote = There is no poll to vote in currently.
 command.pool.vote.voted = You have voted for {0}.
