Add team sizes to MapPersistentContext
Signed-off-by: TheMolkaPL <themolkapl@gmail.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -536,6 +536,7 @@ command.map.mapInfo.authorPlural = Authors
 command.map.mapInfo.contributors = Contributors
 command.map.mapInfo.rules = Rules
 command.map.mapInfo.playerLimit = Max players
+command.map.mapInfo.playerLimit.vs = vs
 command.map.mapInfo.xml = XML
 command.map.mapInfo.sourceCode.tip = View the XML code that controls this map
 command.map.mapInfo.proto = Proto
