Add forfeit command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -850,3 +850,25 @@ misc.seconds.pluralCompound = {0} seconds
 # {1} = the total pages
 pageHeader = Page {0} of {1}
 currentPage = Page {0}
+
+command.forfeit.notEnabled = Forfeit is not enabled at this time.
+command.forfeit.notPossible = It is not possible to forfeit this match.
+command.forfeit.observers = Only active participants can use /forfeit
+
+command.forfeit.disable = You have disabled /forfeit for this match.
+command.forfeit.enable = You have enabled /forfeit for this match.
+
+# {0} = forfeit status
+command.forfeit.voted = You have voted to end the match. ({0})
+command.forfeit.withdraw = You have withdrawn your forfeit vote.
+
+# {0} = player name
+# {1} = forfeit status
+forfeit.broadcast.vote = {0} has voted to end the match. ({1})
+forfeit.broadcast.withdraw = {0} has withdrawn their forfeit vote.
+
+# {0} = Total Forfeits
+# {1} = Total players
+forfeit.broadcast.stats = {0} / {1} votes
+
+forfeit.broadcast.hover = Click to vote in favor of ending the match.
