Update /match formatting
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -601,7 +601,8 @@ map.gamemode.long.arcade = Arcade
 map.gamemode.long.ffa = Free-for-all
 map.gamemode.long.mixed = Mixed
 
-command.match.matchInfo.title = Match Info
+# {0} = The current match number
+command.match.matchInfo.title = Match #{0}
 command.match.matchInfo.time = Time
 command.match.matchInfo.matchTime = Match Time
 command.match.matchInfo.goals = Goals
