Remove weak keys, and make cooldown message generic
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -458,7 +458,7 @@ command.report.notify = {0} reported {1}: {2}
 command.report.acknowledge = The issue will be dealt with shortly.
 
 # {0} = amount of time
-command.report.cooldown = Please wait {0} before submitting another report
+command.cooldown = Please wait {0} before running that command again
 
 # {0} = team name
 ffa.join = You joined the match
