Add a cooldown to /report, resolves Electroid#242

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -457,6 +457,9 @@ command.development.listErrors.noErrors = No errors!
 command.report.notify = {0} reported {1}: {2}
 command.report.acknowledge = The issue will be dealt with shortly.
 
+# {0} = amount of time
+command.cooldown = Please wait {0} before running that command again
+
 # {0} = team name
 ffa.join = You joined the match
 team.join = You joined {0}
