Clean up InventoryGUI; add translations to FlySpeedTool
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -880,3 +880,8 @@ observer.tools.visibility.lore = Observer Visibility: {0}
 observer.tools.gamemode.warning = To toggle your gamemode back, use {0}
 
 observer.command.wrongmode = Sorry, this command is only for observers.
+
+observer.tools.flyspeed.normal = Normal
+observer.tools.flyspeed.fast = Fast
+observer.tools.flyspeed.faster = Faster
+observer.tools.flyspeed.hyperspeed = Hyperspeed
