Translate more messages and add note regarding WorldEdit
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -850,6 +850,9 @@ misc.seconds.singularCompound = {0} second
 # {0} = number of seconds
 misc.seconds.pluralCompound = {0} seconds
 
+misc.on = On
+misc.off = Off
+
 # {0} = the page
 # {1} = the total pages
 pageHeader = Page {0} of {1}
@@ -878,6 +881,7 @@ observer.tools.visibility.lore = Observer Visibility: {0}
 
 # {0} = the command name
 observer.tools.gamemode.warning = To toggle your gamemode back, use {0}
+observer.tools.gamemode.hover = Click to open tool menu
 
 observer.command.wrongmode = Sorry, this command is only for observers.
 
@@ -885,3 +889,6 @@ observer.tools.flyspeed.normal = Normal
 observer.tools.flyspeed.fast = Fast
 observer.tools.flyspeed.faster = Faster
 observer.tools.flyspeed.hyperspeed = Hyperspeed
+
+observer.tools.visibility.shown = Shown
+observer.tools.visibility.hidden = Hidden
