Add Observer Tools

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -850,7 +850,45 @@ misc.seconds.singularCompound = {0} second
 # {0} = number of seconds
 misc.seconds.pluralCompound = {0} seconds
 
+misc.on = On
+misc.off = Off
+
 # {0} = the page
 # {1} = the total pages
 pageHeader = Page {0} of {1}
 currentPage = Page {0}
+
+observer.tools.title = Observer Tools
+observer.tools.displayName = Tools
+observer.tools.lore = Right-click to open the tool menu.
+
+observer.tools.flyspeed = Fly Speed
+observer.tools.nightvision = Night Vision
+observer.tools.gamemode = Gamemode
+observer.tools.visibility = Visibility
+
+# {0} = the player's speed
+observer.tools.flyspeed.lore = Current Speed: {0}
+
+# {0} = the name of a gamemode
+observer.tools.gamemode.lore = Current Gamemode: {0}
+
+# {0} = the status (on/off)
+observer.tools.nightvision.lore = Status: {0}
+
+# {0} = the status of visibility setting
+observer.tools.visibility.lore = Observer Visibility: {0}
+
+# {0} = the command name
+observer.tools.gamemode.warning = To toggle your gamemode back, use {0}
+observer.tools.gamemode.hover = Click to open tool menu
+
+observer.command.wrongmode = Sorry, this command is only for observers.
+
+observer.tools.flyspeed.normal = Normal
+observer.tools.flyspeed.fast = Fast
+observer.tools.flyspeed.faster = Faster
+observer.tools.flyspeed.hyperspeed = Hyperspeed
+
+observer.tools.visibility.shown = Shown
+observer.tools.visibility.hidden = Hidden
