Work on Discord Integration
Signed-off-by: Vlad <me@vladyslav.xyz>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -892,3 +892,9 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
+
+discord.notfound = Discord user {0} was not found on our server.
+discord.verify = Link your accounts by running this command in-game: ```{0}```
+discord.linked = You successfully linked your account.
+discord.sentmessage = Successfully sent verification message in your Discord direct messages.
+
