--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -894,7 +894,7 @@ observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
 
 discord.notfound = Discord user {0} was not found on our server.
-discord.verify = Link your accounts by running this command in-game: ```{0}```
-discord.linked = You successfully linked your account.
-discord.sentmessage = Successfully sent verification message in your Discord direct messages.
+discord.verify = **{0}** requested to link their Minecraft account to your Discord. If this is you, please run the following command in-game: \n`{1}`
+discord.linked = You successfully linked your account to {0}.
+discord.sentmessage = Sent a verification request to {0} via a direct message.
 
