Adjust titles, remove setting, new map name styling
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -894,4 +894,5 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
 
-poll.winner.subTitle = has been selected as the next map
+poll.winner.title = Next map:
+poll.winner.sub = selected as the next map.
