Implement player freezing, resolves #135
Signed-off-by: Meeples10 <8867705+Meeples10@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -822,6 +822,7 @@ death.respawn.confirmed.waiting.flagDropped = You will respawn when the flag is 
 command.freeze.notEnabled = Freeze is not enabled.
 # {0} = the exempt player
 command.freeze.exempt = {0} may not be frozen
+command.freeze.mustBePlayer = Freeze mode must be applied to a player
 
 command.specifyPlayer = Please specify a player
 command.multipleOnlinePlayersFound = More than one player found! Use @<name> for exact matching.
@@ -832,15 +833,15 @@ command.reply.noMessages = You have no private messages to reply to
 
 command.message.blockedNoPermissions = Your message was not sent because {0} has chosen not to receive private messages.
 
-# {0} = the player
-command.freeze.frozen = You have frozen {0}
-command.freeze.unfrozen = You have unfrozen {0}
-
-# {0} = the freezer
+freeze.disabled = Freezing is not enabled
+freeze.freezeMode = You have entered freeze mode
+freeze.freezeMode.nextMatch = You will enter freeze mode next match
+freeze.exitFreezeMode = You have exited freeze mode
 freeze.frozen = You have been frozen by {0}
 freeze.unfrozen = You have been unfrozen by {0}
 freeze.itemName = Player Freezer
 freeze.itemDescription = Right-click a player to freeze/thaw them
+freezer.targetIsExempt = {0} is exempt from being frozen!
 
 misc.unknown = Unknown
 
@@ -893,3 +894,6 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
+
+adminchat.freezePlayer = froze {0}
+adminchat.unfreezePlayer = unfroze {0}
