--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -894,8 +894,5 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
 
-discord.notfound = Discord user {0} was not found on our server.
-discord.verify = **{0}** requested to link their Minecraft account to your Discord. If this is you, please run the following command in-game: \n`{1}`
-discord.linked = You successfully linked your account to {0}.
-discord.sentmessage = Sent a verification request to {0} via a direct message.
-
+discord.verify.request = Send a direct message to {0} on Discord with the following message: \n{1}
+discord.verify.status = You are verified as {0} on Discord.
