--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -893,3 +893,46 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
+
+# {0} = Name of punishment type
+moderation.punishment.prefix = [{0}]
+
+# {0} = The punishment prefix
+# {1} = Name of punishment issuer
+# {2} = Name of punished player
+# {3} = Reason for punishment
+moderation.punishment.format = {0} {1} » {2} » {3}
+
+# {0} = Reason for punishment
+moderation.screen.kick = You were kicked for {0}
+moderation.screen.ban = You were banned for {0}
+
+# {0} = Formatted date of expiry
+moderation.screen.banExpire = Expires on {0}
+
+moderation.screen.rulesLink = Please review our rules at {0}
+
+# {0} = Name of staff member 
+moderation.screen.signoff = Issued by {0}
+
+# {0} = Time until the ban expires
+moderation.screen.expires = Expires in {0}
+
+moderation.warning.header = WARNING
+moderation.warning.message = You have been warned by {0} for:
+
+moderation.mute.message = You have been muted and are unable to send chat messages.
+
+moderation.type.kick = Kick
+moderation.type.mute = Mute
+moderation.type.warn = Warn
+moderation.type.ban = Ban
+moderation.type.temp_ban = Temp-Ban
+
+
+# {0} = Number of online staff
+# {1} = List of staff players
+moderation.staff.name = Online Staff ({0}): {1}
+moderation.staff.empty = No staff online :(
+
+console.displayName = Console
