Add /staff command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/src/main/i18n/templates/strings.properties
+++ b/src/main/i18n/templates/strings.properties
@@ -893,3 +893,8 @@ observer.tools.flyspeed.hyperspeed = Hyperspeed
 
 observer.tools.visibility.shown = Shown
 observer.tools.visibility.hidden = Hidden
+
+# {0} = Number of online staff
+# {1} = List of staff players
+moderation.staff.name = Online Staff ({0}): {1}
+moderation.staff.empty = No staff online :(
