Add moderation commands
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -898,3 +898,49 @@ observer.tools.visibility.hidden = Hidden
 # {1} = List of staff players
 moderation.staff.name = Online Staff ({0}): {1}
 moderation.staff.empty = No staff online :(
+
+# {0} = Reason for punishment
+moderation.screen.kick = You were kicked for {0}
+moderation.screen.ban = You were banned for {0}
+
+# {0} = Formatted date of expiry
+moderation.screen.banExpire = Expires on {0}
+
+moderation.screen.rulesLink = Please review our rules at {0}
+
+# {0} = Name of staff member 
+moderation.screen.signoff = Issued by {0}
+
+# {0} = Time until the ban expires
+moderation.screen.expires = Expires in {0}
+
+moderation.warning = WARNING
+
+moderation.mute.message = You have been muted and are unable to send chat messages.
+
+# {0} = Name of muted player
+moderation.mute.existing = {0} is already muted!
+
+moderation.type.kick = Kick
+moderation.type.mute = Mute
+moderation.type.warn = Warn
+moderation.type.ban = Ban
+
+# {0} = Name of unmuted target
+moderation.unmute.sender = You have unmuted {0}
+moderation.unmute.target = You have been unmuted and may now send messages
+
+# {0} = Name of target
+moderation.unmute.none = {0} is not muted.
+
+moderation.reports.none = There have been no recent reports!
+
+moderation.reports.header = Recent Reports
+
+# {0} = Name of reporter
+# {1} = Time ago
+moderation.reports.hover = Reported by {0}
+
+# {0} = IP address
+moderation.commands.banIP = The IP address ({0}) has been banned.
+moderation.commands.invalidIP = {0} is not a valid IP address.
