Improve moderation commands * Add temp-ban prefix to broadcast * Broadcast silent punishments to admin chat * Ban username in addition to IP when using /ipban * Disallow sending messages to muted players
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -919,6 +919,9 @@ moderation.warning = WARNING
 moderation.mute.message = You have been muted and are unable to send chat messages.
 
 # {0} = Name of muted player
+moderation.mute.target = {0} is muted and unable to receive messages.
+
+# {0} = Name of muted player
 moderation.mute.existing = {0} is already muted!
 
 moderation.type.kick = Kick
