Update punishment broadcast format
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -901,7 +901,8 @@ moderation.staff.empty = No staff online :(
 
 # {0} = Reason for punishment
 moderation.screen.kick = You were kicked for {0}
-moderation.screen.ban = You were banned for {0}
+moderation.screen.ban = You were permanently banned for {0}
+moderation.screen.temp_ban = You were temporarily banned for {0}
 
 # {0} = Formatted date of expiry
 moderation.screen.banExpire = Expires on {0}
@@ -924,10 +925,12 @@ moderation.mute.target = {0} is muted and unable to receive messages.
 # {0} = Name of muted player
 moderation.mute.existing = {0} is already muted!
 
-moderation.type.kick = Kick
-moderation.type.mute = Mute
-moderation.type.warn = Warn
-moderation.type.ban = Ban
+moderation.type.kick = Kicked
+moderation.type.mute = Muted
+moderation.type.warn = Warned
+moderation.type.ban = Permanent Ban
+# {0} = Length of ban
+moderation.type.temp_ban = {0} ban
 
 # {0} = Name of unmuted target
 moderation.unmute.sender = You have unmuted {0}
