--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -989,3 +989,13 @@ moderation.events.similarIP = {0} has a similar IP to banned player {1}.
 # {0} = Name of punisher
 # {1} = Time ago
 moderation.events.similarIP.hover = Banned by {0}, {1}
+
+# {X} = The number of the relevant stat
+stats.basic = Kills: {0}(Killstreak: {1}), Deaths: {2}, K/D: {3}
+
+# {0} = Username
+# {1} = The number of the relevant stat
+stats.kills = Kills: {0} : {1}
+stats.killstreak = Killstreak: {0} : {1}
+stats.deaths = Deaths: {0} : {1}
+stats.bowshot = Longest bowshot: {0} : {1} block(s)
