Add mutes, alts, and baninfo commands
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -918,6 +918,11 @@ moderation.screen.expires = Expires in {0}
 moderation.warning = WARNING
 
 moderation.mute.message = You have been muted and are unable to send chat messages.
+moderation.mute.list = Muted Players
+moderation.mute.none = There are no muted players online!
+
+# {0} = Name of muted player
+moderation.mute.hover = Click to unmute {0}
 
 # {0} = Name of muted player
 moderation.mute.target = {0} is muted and unable to receive messages.
@@ -938,15 +943,29 @@ moderation.unmute.target = You have been unmuted and may now send messages
 
 # {0} = Name of target
 moderation.unmute.none = {0} is not muted.
-
 moderation.reports.none = There have been no recent reports!
-
 moderation.reports.header = Recent Reports
 
 # {0} = Name of reporter
 # {1} = Time ago
 moderation.reports.hover = Reported by {0}
 
+moderation.alts.header = Alt-Accounts
+
 # {0} = IP address
 moderation.commands.banIP = The IP address ({0}) has been banned.
 moderation.commands.invalidIP = {0} is not a valid IP address.
+
+# {0} = Name of target
+moderation.commands.noAlts = {0} has no alternate accounts online.
+
+# {0} = Name of target
+moderation.records.lookupNone = {0} has no punishment record.
+moderation.records.header = Punishment Info
+
+# {0} = Reason for punishment
+moderation.records.reason = Reason: {0}
+
+# {0} = Type of punishment
+moderation.records.type = Type: {0}
+
