Clean up improvements
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -969,3 +969,6 @@ moderation.records.reason = Reason: {0}
 # {0} = Type of punishment
 moderation.records.type = Type: {0}
 
+# {0} = Invalid target input
+commands.invalid.target = {0} has not joined the server yet.
+
