Move all strings into translations, persist UUIDs instead of player names, changed logic so that if an offline player wins there will be no NPE, removed wildcard imports, simplify some definitions, clean up naming of some variables, enchance the sorting, and some more.
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -991,7 +991,7 @@ moderation.events.similarIP = {0} has a similar IP to banned player {1}.
 moderation.events.similarIP.hover = Banned by {0}, {1}
 
 # {X} = The number of the relevant stat
-stats.basic = Kills: {0}(Killstreak: {1}), Deaths: {2}, K/D: {3}
+stats.basic = Kills: {0} (Killstreak: {1}) Deaths: {2} K/D: {3}
 
 # {0} = Username
 # {1} = The number of the relevant stat
@@ -999,3 +999,7 @@ stats.kills = Kills: {0} : {1}
 stats.killstreak = Killstreak: {0} : {1}
 stats.deaths = Deaths: {0} : {1}
 stats.bowshot = Longest bowshot: {0} : {1} block(s)
+
+stats.best = Best stats this match
+
+stats.current = Current stats
