Revert BigDecimals, clean up refrences to Match, tweaked the bowshot message
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -998,7 +998,8 @@ stats.basic = Kills: {0} (Killstreak: {1}) Deaths: {2} K/D: {3}
 stats.kills = Kills: {0} : {1}
 stats.killstreak = Killstreak: {0} : {1}
 stats.deaths = Deaths: {0} : {1}
-stats.bowshot = Longest bowshot: {0} : {1} block(s)
+stats.bowshot.block = Longest bowshot: {0} : {1} block
+stats.bowshot.blocks = Longest bowshot: {0} : {1} blocks
 
 stats.best = Best stats this match
 
