Add sender feedback to force command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -428,7 +428,8 @@ command.rotation.removeat.success = Successfully removed map at index {0} from t
 
 # {0} = user being forced
 # {1} = team being forced onto
-command.team.force.success = {0} successfully forced onto {1}
+# {2} = last team before force
+command.team.force.success = {0} forced onto {1} from {2}
 
 command.team.shuffle.success = Teams successfully shuffled.
 
