New direct message formatting * Revert Admin chat color back to gold
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -973,3 +973,6 @@ moderation.records.type = Type: {0}
 # {0} = Invalid target input
 commands.invalid.target = {0} has not joined the server yet.
 
+command.message.to = To
+command.message.from = From
+
