Clean up formatting and add /say command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -973,6 +973,17 @@ moderation.records.type = Type: {0}
 # {0} = Invalid target input
 commands.invalid.target = {0} has not joined the server yet.
 
-command.message.to = To
-command.message.from = From
+commands.message.to = To
+commands.message.from = From
 
+commands.message.noReply = Did not find a message to reply to, use /msg
+commands.adminchat.noperms = You do not have permissions for admin chat, your chat setting has now been reset
+
+# {0} = Name of target
+commands.message.noTarget = Could not find player '{0}' to send a message.
+
+# {0} = Name of party
+commands.chat.send.noParty = Could not find any party named {0}.
+
+commands.chat.send.notObs = You may only send messages to other teams while observing.
+commands.chat.send.finished = You are unable to send team chat messages at this time.
