Add alt account tracking Tracks and notifies staff members when a recently banned IP joins with a different account.
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -973,3 +973,10 @@ moderation.records.type = Type: {0}
 # {0} = Invalid target input
 commands.invalid.target = {0} has not joined the server yet.
 
+# {0} = Name of new player
+# {1} = Name of recently banned player
+moderation.events.similarIP = {0} has a similar IP to banned player {1}.
+
+# {0} = Name of punisher
+# {1} = Time ago
+moderation.events.similarIP.hover = Banned by {0}, {1}
