Add CrowdIn configuration
Signed-off-by: Isaac Moore <rmsy@me.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -763,7 +763,7 @@ match.flag.captureDenied.byFlag = {0} will be captured when {1} is dropped
 # {1} = singular / plural substitution
 # {2} = the team name
 match.score.scorebox = {0} scored {1} for {2}
-points.singularCompound = 1 point
+points.singularCompound = {0} point
 points.pluralCompound = {0} points
 
 # {0} = singular / plural substitution
