Add a toggle for tracking stats.
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -1004,3 +1004,5 @@ stats.bowshot.blocks = Longest bowshot: {0} : {1} blocks
 stats.best = Best stats this match
 
 stats.current = Current stats
+
+stats.disabled = You have disabled stat tracking
