--- a/util-bukkit/src/main/i18n/translations/strings_zh_CN.properties
+++ b/util-bukkit/src/main/i18n/translations/strings_zh_CN.properties
@@ -491,3 +491,20 @@ currentPage = 第{0}页
 
 # {0} = Invalid target input
 
+
+
+# {0} = Name of target
+
+# {0} = Name of new player
+# {1} = Name of recently banned player
+
+# {0} = Name of punisher
+# {1} = Time ago
+
+# {X} = The number of the relevant stat
+
+# {0} = Username
+# {1} = The number of the relevant stat
+
+
+
