--- a/util-bukkit/src/main/i18n/translations/strings_nl_NL.properties
+++ b/util-bukkit/src/main/i18n/translations/strings_nl_NL.properties
@@ -835,3 +835,20 @@ currentPage = Pagina {0}
 
 # {0} = Invalid target input
 
+
+
+# {0} = Name of target
+
+# {0} = Name of new player
+# {1} = Name of recently banned player
+
+# {0} = Name of punisher
+# {1} = Time ago
+
+# {X} = The number of the relevant stat
+
+# {0} = Username
+# {1} = The number of the relevant stat
+
+
+
