Display KD correctly, changed phrasing for "stats.best".
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -1002,7 +1002,7 @@ stats.deaths = Deaths: {0} : {1}
 stats.bowshot.block = Longest bowshot: {0} : {1} block
 stats.bowshot.blocks = Longest bowshot: {0} : {1} blocks
 
-stats.best = Best stats this match
+stats.best = Top stats this match
 
 stats.current = Current stats
 
