Show map pool in /map
Signed-off-by: KingOfSquares <simonmorland@gmail.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -547,6 +547,7 @@ command.map.mapInfo.sourceCode.tip = View the XML code that controls this map
 command.map.mapInfo.proto = Proto
 command.map.mapInfo.source = Source
 command.map.mapInfo.folder = Folder
+command.map.mapInfo.pools = Pools
 
 
 command.pools.noPoolMatch = No map pools matched query.
