Adjust offline freeze cache * Update player freezer color to white * Add list of offline names to /freezelist * Add /tell to list for allowed commands * Feedback when performing freeze commands on already frozen/thawed players
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -837,11 +837,13 @@ command.message.blockedNoPermissions = Your message was not sent because {0} has
 # {0} = the player
 command.freeze.frozen = You have frozen {0}
 command.freeze.unfrozen = You have unfrozen {0}
+command.freeze.already.frozen = {0} is already frozen.
+command.freeze.already.thaw = {0} is not frozen.
 
 # {0} = number of frozen players
 # {1} = list of frozen player names
 command.freeze.list = Frozen Players ({0}): {1}
-
+command.freeze.list.offline = Offline Frozen Players ({0}): {1} 
 command.freeze.list.none = There are no frozen players!
 
 # {0} = the freezer
