--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -1007,3 +1007,7 @@ stats.best = Best stats this match
 stats.current = Current stats
 
 stats.disabled = You have disabled stat tracking
+
+# --- Refactored Strings ---
+
+admin.reload = Configuration reloaded
