Add /freeze and other moderation improvements
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util-bukkit/src/main/i18n/templates/strings.properties
+++ b/util-bukkit/src/main/i18n/templates/strings.properties
@@ -837,12 +837,25 @@ command.message.blockedNoPermissions = Your message was not sent because {0} has
 # {0} = the player
 command.freeze.frozen = You have frozen {0}
 command.freeze.unfrozen = You have unfrozen {0}
+command.freeze.already.frozen = {0} is already frozen.
+command.freeze.already.thaw = {0} is not frozen.
+
+# {0} = number of frozen players
+# {1} = list of frozen player names
+command.freeze.list = Frozen Players ({0}): {1}
+command.freeze.list.offline = Offline Frozen Players ({0}): {1} 
+command.freeze.list.none = There are no frozen players!
 
 # {0} = the freezer
 freeze.frozen = You have been frozen by {0}
 freeze.unfrozen = You have been unfrozen by {0}
 freeze.itemName = Player Freezer
 freeze.itemDescription = Right-click a player to freeze/thaw them
+
+# {0} = Staff name
+# {1} = target name
+freeze.broadcast.frozen = {0} has frozen {1}
+freeze.broadcast.thaw = {0} has unfrozen {1}
 
 misc.unknown = Unknown
 
@@ -955,8 +968,13 @@ moderation.reports.hover = Reported by {0}
 moderation.alts.header = Alt-Accounts
 
 # {0} = IP address
-moderation.commands.banIP = The IP address ({0}) has been banned.
 moderation.commands.invalidIP = {0} is not a valid IP address.
+
+# {0} = Name of player or IP address
+moderation.commands.banIP = {0} has been IP banned.
+# {0} = Name of player or IP address
+# {1} = Number of alts
+moderation.commands.banIP.alts = {0} has been IP banned along with {1} online alts.
 
 # {0} = Name of target
 moderation.commands.noAlts = {0} has no alternate accounts online.
