Introduce non-dynamic map pools * /setpool command and new random order option for map pools
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/strings.properties
+++ b/util/src/main/i18n/templates/strings.properties
@@ -262,6 +262,7 @@ command.admin.start.unknownState = Match could not be started at this time.
 command.admin.end.unknownError = Match could not be ended at this time.
 
 command.admin.setNext.restartQueued = You may not set the next map when a restart is queued. Use -f to override.
+command.admin.setPool.activeCycle = You may not adjust the pool while match is cycling.
 
 command.admin.mapreload.disabledAutomatic = This command is disabled. Maps will reload automatically if changes are detected.
 
@@ -372,8 +373,9 @@ match.playableArea.leaveAreaWarning = You may not leave the playing field
 # {0} = Maximum build height in meters
 match.maxBuildHeightWarning = You have reached the maximum build height ({0} blocks)
 
-# {0} = map title
-command.admin.set.success = Next map set to {0}
+# {0} = sender name
+# {1} = map title
+command.admin.set.success = {0} has set the next map to {1}
 
 # {0} = map title and version
 command.admin.mapreload.success = {0} successfully marked for reloading.
@@ -560,6 +562,9 @@ command.pools.mapPoolList.title = Loaded Map Pools
 command.pools.skip.message = Skipped a total of {0} positions.
 command.pools.skip.noNegative = You may not skip negative positions!
 
+# {0} = name of map pool
+command.pools.set.matching = {0} is already the current map pool.
+
 command.pool.vote.book.title = Map Vote
 command.pool.vote.book.header = Click to select all maps you would like to play:
 command.pool.vote.noVote = There is no poll to vote in currently.
@@ -567,6 +572,10 @@ command.pool.vote.voted = You have voted for {0}.
 command.pool.vote.removedVote = You removed your vote for {0}.
 
 pools.poolChange = Map pool has been set to {0} in order to better adjust to the current player count.
+
+# {0} = Name of map pool
+# {1} = Name of sender
+pools.poolChange.force = The map pool has been set to {0} by {1}
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
