Add timelimit flag to /setpool * Also clean up various things
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/strings.properties
+++ b/util/src/main/i18n/templates/strings.properties
@@ -553,6 +553,7 @@ command.map.mapInfo.pools = Pools
 
 
 command.pools.noPoolMatch = No map pools matched query.
+command.pools.noDynamic = No dynamic pool could be found.
 command.pools.noRotation = No rotation currently in use.
 command.pools.noMapPools = No loaded map pools.
 command.pools.mapPool.title = Map pool
@@ -576,6 +577,11 @@ pools.poolChange = Map pool has been set to {0} in order to better adjust to the
 # {0} = Name of map pool
 # {1} = Name of sender
 pools.poolChange.force = The map pool has been set to {0} by {1}
+
+# {0} = Name of map pool
+# {1} = Duration of map pool 
+# {2} = Name of sender
+pools.poolChange.force.timed = The map pool has been set to {0} for {1} by {2}
 
 map.genre.objectives = Objectives
 map.genre.deathmatch = Deathmatch
