Introduce testing, a stable config, and better parsing
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -153,3 +153,21 @@ setting.options = Possible options: {0}
 # {1} = old setting value (e.g. "off")
 # {2} = new setting value (e.g. "on")
 setting.set = Changed your {0} setting from {1} to {2}
+
+type.int                   = whole number
+
+type.float                 = decimal number
+
+type.boolean               = true or false
+
+type.duration              = duration
+
+type.vector                = (x,y,z) vector
+
+type.chunk                 = (x,z) vector
+
+type.version               = (x.y.z) version
+
+type.gamemode              = gamemode
+
+type.component             = json text
