--- a/util/src/main/i18n/templates/error.properties
+++ b/util/src/main/i18n/templates/error.properties
@@ -1,6 +1,9 @@
 # {0} - a user's input
-# {1} - the required type (eg. number, string, enum)
+# {1} - the required type (see translations "type.*")
 error.invalidFormat    = Invalid format: '{0}' is not a {1}
+
+# {0} - a value
+# {1} - a range (eg. "[1, 5)")
 error.outOfRange       = Invalid value: {0} is not between {1}
 error.suggestionSuffix = (did you mean '{0}'?)
 
