Add /vanish command for staff * Also introduce a new /list command
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/strings.properties
+++ b/util/src/main/i18n/templates/strings.properties
@@ -291,6 +291,7 @@ command.gameplay.join.matchStarted = This match cannot be joined after it has st
 command.gameplay.join.matchFinished = This match is over - the next match will start in a moment
 command.gameplay.join.joinDenied = You are not allowed to join this match
 command.gameplay.join.uneven = You cannot join because it would make the teams uneven
+command.gameplay.join.vanish = You cannot join the match while vanished
 
 # {0} = user being forced
 command.team.force.exempt = {0} is exempt from being forced on to teams.
@@ -1040,6 +1041,24 @@ stats.best = Top stats this match
 stats.current = Current stats
 
 stats.disabled = You have disabled stat tracking
+
+vanish.activate = You have vanished!
+vanish.deactivate = You are now visible!
+vanish.activate.already = You are already vanished.
+vanish.deactivate.already = You are not vanished.
+vanish.chat.deny = You can only use the admin chat while vanished.
+
+# {0} = Username
+vanish.broadcast.join = {0} quietly joined the game
+vanish.broadcast.leave = {0} quietly left the game
+
+vanish.list.name = Vanished
+
+# {0} = Number of players online
+commands.users.online = Total Online: {0}
+
+commands.users.teams = Teams:
+commands.users.participants = Participants
 
 # --- Refactored Strings ---
 
