Convert VanishManager to an interface and other fixes * Switch to separate permissions for vanish and freeze * Prevent /team force being used on vanished players * Display hotbar message while vanished
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/strings.properties
+++ b/util/src/main/i18n/templates/strings.properties
@@ -1047,6 +1047,7 @@ vanish.deactivate = You are now visible!
 vanish.activate.already = You are already vanished.
 vanish.deactivate.already = You are not vanished.
 vanish.chat.deny = You can only use the admin chat while vanished.
+vanish.hotbar = You are currently vanished
 
 # {0} = Username
 vanish.broadcast.join = {0} quietly joined the game
