Clean up VanishManager and other things
Signed-off-by: applenick <applenick@users.noreply.github.com>

--- a/util/src/main/i18n/templates/strings.properties
+++ b/util/src/main/i18n/templates/strings.properties
@@ -1043,7 +1043,7 @@ stats.current = Current stats
 stats.disabled = You have disabled stat tracking
 
 vanish.activate = You have vanished!
-vanish.deactivate = You are now visible!
+vanish.deactivate = You are no longer vanished!
 vanish.activate.already = You are already vanished.
 vanish.deactivate.already = You are not vanished.
 vanish.chat.deny = You can only use the admin chat while vanished.
