Fix various translation problems
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/util/src/main/i18n/templates/map.properties
+++ b/util/src/main/i18n/templates/map.properties
@@ -45,9 +45,10 @@ map.info.mapTag.hover = Click to list all {0} maps
 map.nextMap = Next map: {0}
 
 # {0} = map name
-map.setNext = Next map set to {0}
+# {1} = player name (who set the map)
+map.setNext = Next map set to {0} by {1}
 
-map.setNext.confim = You may not set the next map when a restart is queued. Use -f to override.
+map.setNext.confirm = You may not set the next map when a restart is queued. Use -f to override.
 
 map.noNextMap = No next map
 
@@ -64,8 +65,6 @@ map.cycle = Cycling in {0}
 map.cycled = Cycled
 
 map.protectPortal = You may not obstruct this area
-
-# pool.* properties
 
 # {0} = map pool name (e.g. "Mega")
 pool.change = Map pool has been set to {0} in order to better adjust to the current player count.
