--- a/util/src/main/i18n/templates/observer.properties
+++ b/util/src/main/i18n/templates/observer.properties
@@ -74,7 +74,7 @@ observer.preview.walkSpeed = Walking Speed ({0}x)
 
 observer.preview.closeButton = Close
 
-picker.title.teamClass = Team/Class Selection
+picker.title.teamClass = Team & Class Selection
 
 picker.title.team = Team Selection
 
