Add /vanish for staff
Co-authored-by: applenick <applenick@users.noreply.github.com>
Signed-off-by: Ashcon Partovi <ashcon@partovi.net>

--- a/util/src/main/i18n/templates/command.properties
+++ b/util/src/main/i18n/templates/command.properties
@@ -65,3 +65,10 @@ command.simplePageHeader = {0} of {1}
 # {0} = page number
 # {1} = total number of pages
 command.invalidPage = There is no page {0}. Pages run from 1 to {1}.
+
+# {0} = number of players online
+command.list.online = Total Online: {0}
+
+command.list.teams = Teams:
+
+command.list.participants = Participants
