--- a/util/src/main/i18n/templates/misc.properties
+++ b/util/src/main/i18n/templates/misc.properties
@@ -140,8 +140,15 @@ misc.editWand = Edit Wand
 
 # {0} = player name
 misc.join = {0} joined the game
+
+# {0} = player name
+misc.join.quiet = {0} quietly joined the game
+
 # {0} = player name
 misc.leave = {0} left the game
+
+# {0} = player name
+misc.leave.quiet = {0} quietly left the game
 
 misc.incorrectWorld = Uh oh! We had an error. Please try rejoining.
 
