--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -166,3 +166,16 @@ moderation.report.acknowledge = The issue will be dealt with shortly.
 moderation.afk.warn = You will be disconnected for inactivity in {0} seconds
 
 moderation.afk.kick = You were disconnected for inactivity
+
+vanish.activate = You have vanished!
+
+vanish.deactivate = You are now visible!
+
+vanish.activate.already = You are already vanished.
+
+vanish.deactivate.already = You are not vanished.
+
+vanish.chat.deny = You can only use the admin chat while vanished.
+
+vanish.hotbar = You are currently vanished
+
