Move inv_slots.png to Imgur

--- a/docs/reference/inventory.mdx
+++ b/docs/reference/inventory.mdx
@@ -11,7 +11,7 @@ import Materials from "../../src/components/materials";
   </div>
   <div className="col col--6">
     <p>
-      <img alt="Inv Slots" src="img/inv_slots.png" />
+      <img alt="Inv Slots" src="https://i.imgur.com/cShqe87.png" />
     </p>
   </div>
   <div className="col col--6">
