Update Romanian translations

--- a/util/src/main/i18n/translations/command_ro_RO.properties
+++ b/util/src/main/i18n/translations/command_ro_RO.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Trebuie să fii un jucător pentru a folosi această comandă.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Te rugăm să specifici un jucător
 
 
 # {0} = player name
