Update Chinese Simplified translations

--- a/util/src/main/i18n/translations/command_zh_CN.properties
+++ b/util/src/main/i18n/translations/command_zh_CN.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = 只有玩家可以用此命令。
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = 请指定一个玩家
 
 
 # {0} = player name
