--- a/util/src/main/i18n/translations/command_pt_BR.properties
+++ b/util/src/main/i18n/translations/command_pt_BR.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Você deve ser um jogador para usar este comando.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Por favor, indique um jogador
 
 
 # {0} = player name
