--- a/util/src/main/i18n/translations/command_ru_RU.properties
+++ b/util/src/main/i18n/translations/command_ru_RU.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Вы должны быть игроком, чтобы выполнить эту команду.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Укажите игрока
 
 
 # {0} = player name
