--- a/util/src/main/i18n/translations/moderation_ru_RU.properties
+++ b/util/src/main/i18n/translations/moderation_ru_RU.properties
@@ -2,6 +2,7 @@
 
 # {0} = Type of punishment
 
+moderation.type.kick = Кикнут
 
 
 
@@ -10,6 +11,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = Никого из персонала нет онлайн \:(
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -23,6 +25,7 @@
 
 # {0} = duration (e.g. "2 weeks")
 
+moderation.mute.message = Вы были замучены и не можете отправлять сообщения в чате.
 
 
 
@@ -41,6 +44,7 @@
 
 # {0} = player name
 
+moderation.alts.header = Альт-аккаунты
 
 # {0} = player name
 
