--- a/util/src/main/i18n/translations/command_sv_SE.properties
+++ b/util/src/main/i18n/translations/command_sv_SE.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Du måste vara en spelare för att använda det här kommandot.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Vänligen ange en spelare
 
 
 # {0} = player name
