Update Pirate English translations

--- a/util/src/main/i18n/translations/command_en_PT.properties
+++ b/util/src/main/i18n/translations/command_en_PT.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Ye must be a crew member t' use this command.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Please specify yer target
 
 
 # {0} = player name
