Update Tagalog translations

--- a/util/src/main/i18n/translations/command_tl_PH.properties
+++ b/util/src/main/i18n/translations/command_tl_PH.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = Kailangan mo maging manlalaro para magamit ang utos na ito.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Mangyaring tukuyin ang isang manlalaro
 
 
 # {0} = player name
