--- a/util/src/main/i18n/translations/command_lol_US.properties
+++ b/util/src/main/i18n/translations/command_lol_US.properties
@@ -11,6 +11,7 @@
 
 
 
+command.onlyPlayers = U hav 2 b playin 2 do dis.
 
 # {0} = module name (proper noun)
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "10 seconds")
 
+command.specifyPlayer = Plz specify a kat
 
 
 # {0} = player name
