Update LOLCAT translations

--- a/util/src/main/i18n/translations/moderation_lol_US.properties
+++ b/util/src/main/i18n/translations/moderation_lol_US.properties
@@ -10,6 +10,7 @@
 
 # {0} = number of online staff
 # {1} = list of staff names (e.g. "Bob, Alice, and Jerry")
+moderation.staff.empty = staff ish kat nappin
 
 # {0} = punishment reason (e.g. "Hacking is not allowed")
 
@@ -23,6 +24,7 @@
 
 # {0} = duration (e.g. "2 weeks")
 
+moderation.mute.message = yawr mouth iz naw tapped and yu cannot spaek.
 
 
 
@@ -41,6 +43,7 @@
 
 # {0} = player name
 
+moderation.alts.header = Alt-KITTEHS
 
 # {0} = player name
 
